Fixed header checkbox alignment

--- a/Angular/src/app/fragments/fragments.component.scss
+++ b/Angular/src/app/fragments/fragments.component.scss
@@ -177,3 +177,11 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.mat-checkbox-layout {
+  margin-bottom: 0;
+}
+
+.mat-checkbox-label {
+  width: fit-content;
+}
